<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LolBuilds</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_ajustes">Settings</string>
    <string name="title_activity_ayuda">Help</string>
    <string name="title_activity_help">Help</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="pref_title_urls">Oficials Web Pages</string>
    <string name="pref_header_acerca">About we</string>
    <string name="acerca_de_texto">I am a senior student who is studying the development of mobile applications. I hope you like the application :D</string>
    <string name="disclaimer">DISCLAIMER\n\nLoLBuilds isn\'t endorsed by Riot Games and doesn\t reflect the views or opinions of Riot Games of Riot Games or anyone officially involved in producing or managing League of Legends. League of Legends and Riot Games are trademarks of Riot Games, Inc. League of Legends © Riot Games, Inc.</string>
    <string name="desarrollador">DEVELOPER: Raúl Saavedra\n\nTRANSLATOR: Raúl Saavedra</string>
    <string name="app_version">1.0</string>
    <string name="title_version">Version</string>
    <string name="title_activity_bans">Bans</string>
    <string name="title_activity_contacto">Contact</string>
    <string name="idioma">Language</string>
    <string name="resumen_idioma">Here you can change the language</string>
    <string name="name_key">name_key</string>
    <string name="name_title">Name</string>
    <string name="titulo_idioma">Language</string>
    <string name="idioma_key">idioma_key</string>
    <string name="contacto">Contact</string>
    <string name="nombre">Name</string>
    <string name="correo">Mail</string>
    <string name="asunto">Subject</string>
    <string name="mensaje">Message</string>
    <string name="enviar">Send</string>
    <string name="builds_menu">Builds</string>
    <string name="bans_menu">Bans</string>
    <string name="ajustes_manu">Settings</string>
    <string name="ayuda_menu">Help</string>
    <string name="contacto_menu">Contact</string>
    <string name="title_activity_champ">ChampActivity</string>
    <string name="title_search">Search</string>
    <string name="title_filter" translatable="false">Filter</string>
    <string name="title_aatrox" translatable="false">Aatrox</string>
    <string name="title_ahri" translatable="false">Ahri</string>
    <string name="title_akali" translatable="false">Akali</string>
    <string name="title_alistar" translatable="false">Alistar</string>
    <string name="title_amumu" translatable="false">Amumu</string>
    <string name="title_anivia" translatable="false">Anivia</string>
    <string name="title_annie" translatable="false">Annie</string>
    <string name="title_ashe" translatable="false">Ashe</string>
    <string name="title_aurelion_sol" translatable="false">Aurelion Sol</string>
    <string name="title_azir" translatable="false">Azir</string>
    <string name="title_bardo">Bardo</string>
    <string name="title_blitzcrank" translatable="false">Blitzcrank</string>
    <string name="title_brand" translatable="false">Brand</string>
    <string name="title_braum" translatable="false">Braum</string>
    <string name="title_caitlyn" translatable="false">Caitlyn</string>
    <string name="title_camille" translatable="false">Camille</string>
    <string name="title_cassiopeia" translatable="false">Cassiopeia</string>
    <string name="title_cho_gath" translatable="false">Cho\Gath</string>
    <string name="title_corki" translatable="false">Corki</string>
    <string name="title_darius" translatable="false">Darius</string>
    <string name="title_diana" translatable="false">Diana</string>
    <string name="title_dr_mundo" translatable="false">Dr.Mundo</string>
    <string name="title_draven" translatable="false">Draven</string>
    <string name="title_ekko" translatable="false">Ekko</string>
    <string name="title_elise" translatable="false">Elise</string>
    <string name="title_evelynn" translatable="false">Evelynn</string>
    <string name="title_ezreal" translatable="false">Ezreal</string>
    <string name="title_fiddlesticks" translatable="false">Fiddlesticks</string>
    <string name="title_fiora" translatable="false">Fiora</string>
    <string name="title_fizz" translatable="false">Fizz</string>
    <string name="title_galio" translatable="false">Galio</string>
    <string name="title_gangplank" translatable="false">Gangplank</string>
    <string name="title_garen" translatable="false">Garen</string>
    <string name="title_gnar" translatable="false">Gnar</string>
    <string name="title_gragas" translatable="false">Gragas</string>
    <string name="title_graves" translatable="false">Graves</string>
    <string name="title_hecarim" translatable="false">Hecarim</string>
    <string name="title_heimerdinger" translatable="false">Heimerdinger</string>
    <string name="title_illaoi" translatable="false">Illaoi</string>
    <string name="title_irelia" translatable="false">Irelia</string>
    <string name="title_top" translatable="false">Top</string>
    <string name="title_jungla" translatable="false">Jungla</string>
    <string name="title_mid" translatable="false">Mid</string>
    <string name="title_adc" translatable="false">Adc</string>
    <string name="title_support" translatable="false">Support</string>
    <string name="isFirstRun" translatable="false">true</string>
    <string name="title_riot_support">Riot support</string>
    <string name="title_official_page">Web Page</string>
    <string name="title_favourites">Favorites</string>
    <string name="title_general">General</string>
    <string name="text_first">1- In option number one, you can open the menu to access some features (Builds (Default page), Bans, Videos, Settings, Help, Contact, Sign Out(If you use this option, you will go back to the screen the first time and it will need to sign in again))\n\n
2- In option number two, you have the option to search for characters by name or by a letter that contains in character name\n\n
3- In option number three, you have the option to filter the characters by their role\n\n
4- In each character you can tap to see the information about the build, which to climb on each level and the runes\n\n
4.1 - If you hold down a character, that character will be added to favorites (it will be seen visually because the character will have a heart in his image in the lower right part) and if the character is already in favorites it will be deleted from favorites\n\n</string>
    <string name="bienvenida">Welcome to LolBuids invoker</string>
    <string name="signin">SIGN IN</string>
    <string name="signout">Sign Out</string>
    <string name="title_activity_video">Videos</string>
    <string name="competitiveplays">Best Competitive Plays</string>

</resources>