<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/contact_form_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="5dp"
        android:text="@string/contacto"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-light"
        android:textSize="40sp"
        android:typeface="serif" />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:fontFamily="sans-serif-light"/>

    <EditText
        android:id="@+id/asunto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/asunto"
        android:inputType="textMultiLine"
        android:fontFamily="sans-serif-light"/>

    <EditText
        android:id="@+id/mensaje"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="top"
        android:hint="@string/mensaje"
        android:fitsSystemWindows="true"
        android:breakStrategy="balanced"
        android:inputType="textMultiLine"
        android:singleLine="false"
        android:padding="5dp"
        android:fontFamily="sans-serif-light"/>

    <Button
        android:onClick="enviarFormulario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/toolbar"
        android:elevation="4dp"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:text="@string/enviar"
        android:textColor="@color/blanco"
        android:fontFamily="sans-serif-light"/>

</LinearLayout>